cmake_minimum_required(VERSION 3.10)
project(common_modules)
add_compile_options("$<$<C_COMPILER_ID:MSVC>:/utf-8>")
add_compile_options("$<$<CXX_COMPILER_ID:MSVC>:/utf-8>")

include_directories(..)

add_subdirectory(logger)
add_subdirectory(msg)
add_subdirectory(config)
add_subdirectory(plan)
add_subdirectory(tools)
add_subdirectory(api)
add_subdirectory(data-waiter)
add_subdirectory(delayqueue)
add_subdirectory(behavior)

aux_source_directory(./logger LIB_IFR_MODULES_TMP)
set(LIB_IFR_MODULES ${LIB_IFR_MODULES_TMP} ${LIB_IFR_MODULES})
aux_source_directory(./msg LIB_IFR_MODULES_TMP)
set(LIB_IFR_MODULES ${LIB_IFR_MODULES_TMP} ${LIB_IFR_MODULES})
aux_source_directory(./config LIB_IFR_MODULES_TMP)
set(LIB_IFR_MODULES ${LIB_IFR_MODULES_TMP} ${LIB_IFR_MODULES})
aux_source_directory(./plan LIB_IFR_MODULES_TMP)
set(LIB_IFR_MODULES ${LIB_IFR_MODULES_TMP} ${LIB_IFR_MODULES})
aux_source_directory(./tools LIB_IFR_MODULES_TMP)
set(LIB_IFR_MODULES ${LIB_IFR_MODULES_TMP} ${LIB_IFR_MODULES})
aux_source_directory(./api LIB_IFR_MODULES_TMP)
set(LIB_IFR_MODULES ${LIB_IFR_MODULES_TMP} ${LIB_IFR_MODULES})
aux_source_directory(./data-waiter LIB_IFR_MODULES_TMP)
set(LIB_IFR_MODULES ${LIB_IFR_MODULES_TMP} ${LIB_IFR_MODULES})
aux_source_directory(./delayqueue LIB_IFR_MODULES_TMP)
set(LIB_IFR_MODULES ${LIB_IFR_MODULES_TMP} ${LIB_IFR_MODULES})
aux_source_directory(./behavior LIB_IFR_MODULES_TMP)
set(LIB_IFR_MODULES ${LIB_IFR_MODULES_TMP} ${LIB_IFR_MODULES})
aux_source_directory(../lib/rapidjson LIB_IFR_MODULES_TMP)
set(LIB_IFR_MODULES ${LIB_IFR_MODULES_TMP} ${LIB_IFR_MODULES})
aux_source_directory(../lib/mongoose LIB_IFR_MODULES_TMP)
set(LIB_IFR_MODULES ${LIB_IFR_MODULES_TMP} ${LIB_IFR_MODULES})

message("LIB_IFR_MODULES: ${LIB_IFR_MODULES}")
add_library(common_modules ${LIB_IFR_MODULES})